# slack-fetcher

./: .env.example  .gitignore  README.md  pyproject.toml  slack_fetch.py  slack_oauth_setup.py
